fixed bug that was causing excess spacing

--- a/styles/faqStyles.css
+++ b/styles/faqStyles.css
@@ -19,7 +19,7 @@
     margin: 10px;
 }
 .question h3 {
-    margin: 0;
+    margin: -4px;
     padding: 10px;
     background-color: #eeebeb;
     border-radius: 10px;
